<resources>
    <string name="app_name">Custody Rx</string>
    <string name="contained_button">Contained Button</string>
    <string name="login_to_your_account">Login to your account.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="itemsight">ItemSight</string>
    <string name="inventory">Inventory</string>
    <string name="checklist">Checklist</string>
    <string name="transfers">Transfers</string>
    <string name="settings">Settings</string>
    <string name="sync">Sync</string>
    <string name="general">General</string>
    <string name="scanner_rfid">Scanner/RFID</string>
    <string name="logout">Logout</string>
    <string name="msg_auto_logout">Logged out due to inactivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inventory_type">Inventory Type</string>
    <string name="full_inventory">Full Inventory</string>
    <string name="location_inventory">Location Inventory</string>
    <string name="perform_inventory_across_the_entire_business_premises">Perform inventory across the entire business premises</string>
    <string name="inventory_a_specific_location_e_g_room_cabinet_vehicle">Inventory a specific location, e.g. room, cabinet, vehicle</string>
    <string name="select_location">Select Location</string>
    <string name="perform_inventory">Perform Inventory</string>
    <string name="select_results">Select Results</string>
    <string name="enter_username_valid">Please enter username</string>
    <string name="enter_username_valid_contact">Please enter valid username</string>
    <string name="enter_password_valid">Please enter password</string>
    <string name="no_internet">No Internet Connection!!</string>
    <string name="str_please_wait">Please Wait..</string>
    <string name="tools">Tools</string>
    <string name="ble_error_msg_01">Sorry, Bluetooth is not available!</string>
    <string name="ble_error_msg_02">Please enable Bluetooth first!</string>
    <string name="ble_error_msg_03">Android 6.0 and above requires location permission to use Bluetooth</string>
    <string name="ble_error_msg_04">Android 6.0 and above need to be turned on to use Bluetooth</string>
    <string name="ble_error_msg_05">Scanning using the same filter has been started</string>
    <string name="ble_error_msg_06">Unable to register Bluetooth scanning application</string>
    <string name="ble_error_msg_07">Does not support scanning with specified parameters</string>
    <string name="ble_error_msg_08">The scan failed due to an internal error</string>
    <string name="ble_error_msg_09">The scan cannot start due to limited hardware resources</string>
    <string name="no_start_ble">Bluetooth does not start</string>
    <string name="ble_error_msg_10">Android 7+ does not allow more scans. Try %d seconds</string>
    <string name="str_location">positioning service</string>
    <string name="operation_failed">operation failed:</string>
    <string-array name="logout_timers">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
    </string-array>
    <string-array name="four_channel">
        <item>"NONE"</item>
        <item>"ANT1"</item>
        <item>"ANT2"</item>
        <item>"ANT3"</item>
        <item>"ANT4"</item>
    </string-array>
    <string-array name="eight_channel">
        <item>"NONE"</item>
        <item>"ANT1"</item>
        <item>"ANT2"</item>
        <item>"ANT3"</item>
        <item>"ANT4"</item>
        <item>"ANT5"</item>
        <item>"ANT6"</item>
        <item>"ANT7"</item>
        <item>"ANT8"</item>
    </string-array>
    <string-array name="high_eight_channel">
        <item>"NONE"</item>
        <item>"ANT9"</item>
        <item>"ANT10"</item>
        <item>"ANT11"</item>
        <item>"ANT12"</item>
        <item>"ANT13"</item>
        <item>"ANT14"</item>
        <item>"ANT15"</item>
        <item>"ANT16"</item>
    </string-array>
    <string name="start_scan">Search Bluetooth</string>
    <string name="stop_scan">Stop scanning</string>
    <string name="alert_dialog_title">Prompt</string>
    <string name="ble_disconnect">Bluetooth is disconnected</string>
    <string name="sure">Confirm</string>
    <string name="ble_connect_success">Bluetooth connection successful</string>
    <string name="open_location">Please turn on location services</string>
    <string name="get_location_permission_fail">Failed to obtain permission!</string>
    <string name="get_location_permission">You need to open the location permission to use Bluetooth ble to search for devices!</string>
    <string name="to_open">Go to open</string>
    <string name="cancel">Cancel</string>
    <string name="no_bluetooth">This model does not support Bluetooth.</string>
    <string name="menu_inventory_6c">Inventory tags</string>
    <string name="set_basic_param">Basic parameter settings</string>
    <string name="nav_baud_rate">baud rate</string>
    <string name="menu_reader_rs_485_hex">Reader Address (HEX)</string>
    <string name="menu_reader_identify">Reader identification</string>
    <string name="menu_reader_version">Firmware version</string>
    <string name="menu_reader_status">Reader status</string>
    <string name="menu_reader_temperature">Temperature</string>
    <string name="menu_reader_gpio">Read and write GPIO</string>
    <string name="menu_ble_module">Bluetooth device</string>
    <string name="menu_reader_beeper">Beeper settings</string>
    <string name="set_rf_param">RF parameter setting</string>
    <string name="menu_rf_output_power">RF output power</string>
    <string name="menu_switch_ant">Switch working antenna</string>
    <string name="menu_return_loss">Measuring return loss</string>
    <string name="menu_ant_sensitivity">Antenna sensitivity</string>
    <string name="menu_fast_read_tid">Tag Quick Read TID</string>
    <string name="menu_rf_spectrum">RF spectrum</string>
    <string name="menu_rf_com_link">RF communication link</string>
    <string name="access_tag">Access tag</string>
    <string name="tag_count">Tags:</string>
    <string name="recognition_speed">Speed:</string>
    <string name="cumulative_return_data">All data:</string>
    <string name="command_execution_time">Exe time:</string>
    <string name="tag_count_num">%1$d</string>
    <string name="tag_total_num">%1$d</string>
    <string name="tag_speed">%1$d ps</string>
    <string name="tag_run_time">%1$d ms</string>
    <string name="set">Set up</string>
    <string name="prompt_empty_address">Address cannot be empty</string>
    <string name="set_success">Set up successfully</string>
    <string name="set_error">Setup failed, please try again</string>
    <string name="read">Read</string>
    <string name="read_success">Read successfully</string>
    <string name="read_error">Failed to read, please try again</string>
    <string name="read_firm_version_error">Failed to read firm version, please try again</string>
    <string name="prompt_reader_identify_empty">Reader ID cannot be empty</string>
    <string name="incorrect_data_length">Incorrect data length</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="read_gpio1_and_2">Read GPIO (GPIO 1, GPIO 2):</string>
    <string name="set_gpio3">Write GPIO 3:</string>
    <string name="set_gpio4">Write GPIO 4:</string>
    <string name="quiet">Quiet</string>
    <string name="inventory_after_sound">Sound after inventory</string>
    <string name="every_sound">Every time you read a tag sound</string>
    <string name="incorrect_value">The value is wrong (0 ~ 255)</string>
    <string name="antenna_port">Antenna port:</string>
    <string name="ant_num_error">Incorrect antenna number returned</string>
    <string name="measure">measuring</string>
    <string name="return_loss_threshold">Return loss threshold:</string>
    <string name="desc">Explanation:</string>
    <string name="desc_detector_1">1. The system automatically measures the return loss (Return Loss) of the antenna port when reading and writing tags.</string>
    <string name="desc_detector_2">2. In order to protect the device, it will report an error if the return loss is greater than this threshold and stop reading and writing tags.</string>
    <string name="desc_detector_3">3. The larger the threshold, the higher the impedance matching requirements of the antenna port. Set to 0 to disable this function.</string>
    <string name="desc_monza_1">1. Only some models of the Impinj Monza series of tags support fast TID reading function.</string>
    <string name="desc_monza_2">2. If the tag does not support fast TID reading, please turn off this function.</string>
    <string name="profile_option0">"Configuration 0 Tari 25uS; FM0 40KHz"</string>
    <string name="profile_option1">"Configuration 1 (recommended and default) Tari 25uS; Miller 4 250KHz"</string>
    <string name="profile_option2">"Configuration 2 Tari 25uS; Miller 4 300KHz"</string>
    <string name="profile_option3">"Configuration 3 Tari 6.25uS; FM0 400KHz"</string>
    <string name="save">Save</string>
    <string name="un_save">Do not save</string>
    <string name="default_frequency">Default frequency</string>
    <string name="custom_frequency">Custom frequency</string>
    <string name="freq_start">Start freq:</string>
    <string name="freq_end">End freq:</string>
    <string name="freq_interval">Freq interval:</string>
    <string name="freq_count">Freq num:</string>
    <string name="num"> </string>
    <string name="fcc">FCC</string>
    <string name="ets">ETSI</string>
    <string name="chn">CHN</string>
    <string name="mhz">MHz</string>
    <string name="format_region">%1$.2f</string>
    <string name="khz">KHz</string>
    <string name="id">ID</string>
    <string name="epc">EPC</string>
    <string name="pc">PC</string>
    <string name="rssi">RSSI</string>
    <string name="carrier_frequency">frequency</string>
    <string name="start">Start</string>
    <string name="start_inventory">Start inventory</string>
    <string name="stop">Stop</string>
    <string name="stop_inventory">Stop inventory</string>
    <string name="refresh_data">Clear</string>
    <string name="custom">Custom</string>
    <string name="common">Common</string>
    <string name="session">Session:</string>
    <string name="target">Target:</string>
    <string name="dbm">dBm</string>
    <string name="repeat">Repeat:</string>
    <string name="inventory_set">Inventory settings</string>
    <string name="select_tag">Filter tags</string>
    <string name="rw_tag">Read and write tags</string>
    <string name="read_tag">Read tag</string>
    <string name="write_tag">Write tag</string>
    <string name="password_area">Pwd</string>
    <string name="epc_area">EPC</string>
    <string name="tid_area">TID</string>
    <string name="user_area">USER</string>
    <string name="access_code">Access pwd(HEX):</string>
    <string name="start_address">Start add.(WORD):</string>
    <string name="data_length">Data len(WORD):</string>
    <string name="data_input">Data input:</string>
    <string name="lock_tag">Lock tag</string>
    <string name="check_tag">Check tag</string>
    <string name="uncheck_tag">Uncheck</string>
    <string name="access_password_area">Access pwd</string>
    <string name="destroy_password_area">destroy pwd</string>
    <string name="limit_open">Open</string>
    <string name="lock">Lock</string>
    <string name="open_forever">Open forever</string>
    <string name="lock_forever">Lock forever</string>
    <string name="r6_lock_forever">R6 lock forever</string>
    <string name="destroy_tag">Destroy tag</string>
    <string name="destroy_password_hex">Destroy pwd(HEX):</string>
</resources>